--- a/configs/OV_base3_omni3d_out_vov_debug.yaml
+++ b/configs/OV_base3_omni3d_out_vov_debug.yaml
@@ -2,22 +2,26 @@ _BASE_: "Base_Omni3D_demo.yaml"
 
 DATASETS:
   TRAIN: ('nuScenes_train', 'nuScenes_val', 'KITTI_train', 'KITTI_val')
+  #TRAIN: ('KITTI_val',)
   TEST: ('nuScenes_test', 'KITTI_test') 
+  #TEST: ('KITTI_val',)
   CATEGORY_NAMES: ('cyclist', 'pedestrian', 'trailer', 'bus', 'motorcycle', 'car', 'barrier', 'truck', 'van', 'traffic cone', 'bicycle')
 
 INPUT:
   MIN_SIZE_TRAIN: (512,)
   MIN_SIZE_TEST: 512
   RANDOM_FLIP: "none"
-  COLOR_AUG: False
+  COLOR_AUG: True
 
 SOLVER:
-  IMS_PER_BATCH: 64
-  TYPE: "adamw"
-  BASE_LR: 4e-4
+  IMS_PER_BATCH: 2
+  TYPE: "mmcv_AdamW"
+  BASE_LR: 2e-4
+  WEIGHT_DECAY: 1e-2
   MAX_ITER: 116000
+  VIRTUAL_EPOCHS: 20
 
-  LR_SCHEDULER_NAME: "WarmupCosineLR"
+  LR_SCHEDULER_NAME: "CosineAnnealing"
   WARMUP_FACTOR: 0.3333
   WARMUP_ITERS: 500
   WARMUP_METHOD: "linear"
@@ -28,7 +32,7 @@ SOLVER:
     NORM_TYPE: 2.0
 
 TEST:
-  EVAL_PERIOD: 116000 #11600
+  EVAL_PERIOD: 23200
 
 MODEL:
   META_ARCHITECTURE: "OV_3D_Det"
@@ -40,24 +44,34 @@ MODEL:
       GRID_MASK: True
 
       BACKBONE_NAME: 'VoVNet'
+      BACKBONE_NORM_EVAL: False
       BACKBONE_FP16: True
+      USE_NECK: True
       NECK_NAME: 'CPFPN_VoV'
-      TRANSFORMER_NAME: 'PETR_TRANSFORMER'
+      TRANSFORMER_NAME: 'DETR_TRANSFORMER'
+      FLASH_ATTN: True
       MATCHER_NAME: 'HungarianAssigner3D'
       DEPTH_LID: True
       NUM_QUERY: 200
 
+      GLIP_FEAT_FUSION: 'none'  # 'vision' or 'language' or 'VL' or 'none'
+      VISION_FUSION_LEVEL: 4
+      TEXT_FUSION_POSITION: 'after'  # before or after
+
       HEAD:
-        OV_CLS_HEAD: True
+        OV_CLS_HEAD: False
         PERFORM_2D_DET: False
-        LOC_MODE: 'uvd' # 'xyz' or 'uvd'
         VIRTUAL_DEPTH: True
         VIRTUAL_FOCAL_Y: 512.0
         UNCERN_RANGE: [-10, 10]
         CLS_WEIGHT: 2.0
-        REG_WEIGHT: 0.25
-        DET_2D_L1_WEIGHT: 5.0
-        DET_2D_GIOU_WEIGHT: 2.0
+        LOC_WEIGHT: 0.1
+        POSE_WEIGHT: 0.25
+        DIM_WEIGHT: 0.25
+        DEPTH_WEIGHT: 0.25
+        UV_WEIGHT: 20.0
+        DET_2D_L1_WEIGHT: 2.0
+        DET_2D_IOU_WEIGHT: 2.0
 
       POST_PROCESS:
         CONFIDENCE_2D_THRE: 0.0
@@ -66,7 +80,7 @@ MODEL:
 
   GLIP_MODEL:
     USE_GLIP: True
-    GLIP_INITIALIZE_QUERY: True
+    GLIP_INITIALIZE_QUERY: False
     NO_GRADIENT: True
     GLIP_WEIGHT: "MODEL/glip_a_tiny_o365.pth"
 
