--- a/configs/OV_base3_omni3d_out_vov_uv0.yaml
+++ b/configs/OV_base3_omni3d_out_vov_uv0.yaml
@@ -1,10 +1,8 @@
 _BASE_: "Base_Omni3D_demo.yaml"
 
 DATASETS:
-  #TRAIN: ('nuScenes_train', 'nuScenes_val', 'KITTI_train', 'KITTI_val')
-  TRAIN: ('KITTI_val',)
-  #TEST: ('nuScenes_test', 'KITTI_test') 
-  TEST: ('KITTI_val',)
+  TRAIN: ('nuScenes_train', 'nuScenes_val', 'KITTI_train', 'KITTI_val')
+  TEST: ('nuScenes_test', 'KITTI_test') 
   CATEGORY_NAMES: ('cyclist', 'pedestrian', 'trailer', 'bus', 'motorcycle', 'car', 'barrier', 'truck', 'van', 'traffic cone', 'bicycle')
 
 INPUT:
