--- a/configs/OV_base3_omni3d_out_vov_deformable_debug.yaml
+++ b/configs/OV_base3_omni3d_out_vov_deformable_debug.yaml
@@ -48,7 +48,7 @@ MODEL:
       BACKBONE_FP16: True
       USE_NECK: True
       NECK_NAME: 'CPFPN_VoV'
-      FEAT_LEVEL_NUM: 4
+      FEAT_LEVEL_IDXS: [0, 1,]
 
       TRANSFORMER_NAME: 'DEFORMABLE_TRANSFORMER'
       ENC_NUM: 0
@@ -78,7 +78,7 @@ MODEL:
         DET_2D_IOU_WEIGHT: 2.0
 
       POST_PROCESS:
-        CONFIDENCE_2D_THRE: 0.2
+        CONFIDENCE_2D_THRE: 0.0
         CONFIDENCE_3D_THRE: -1.0
         OUTPUT_CONFIDENCE: '3D'
 
