--- a/configs/OV_base4_omni3d_out_resize.yaml
+++ b/configs/OV_base4_omni3d_out_resize.yaml
@@ -54,6 +54,7 @@ MODEL:
       TRANSFORMER_NAME: 'DEFORMABLE_TRANSFORMER'
       ENC_NUM: 0
       DEC_NUM: 6
+      CLIP_LINEAR_NORM: True
 
       MATCHER_NAME: 'HungarianAssigner3D'
       DEPTH_LID: True
