--- a/configs/OV_base4_omni3d_out.yaml
+++ b/configs/OV_base4_omni3d_out.yaml
@@ -8,6 +8,7 @@ DATASETS:
   CATEGORY_NAMES: ('cyclist', 'pedestrian', 'trailer', 'bus', 'motorcycle', 'car', 'barrier', 'truck', 'van', 'traffic cone', 'bicycle')
 
 INPUT:
+  #RESIZE_TGT_SIZE: (640, 512) # (1280, 1024)
   MIN_SIZE_TRAIN: (256,)
   MIN_SIZE_TEST: 256
   RANDOM_FLIP: "none"
@@ -53,6 +54,7 @@ MODEL:
       TRANSFORMER_NAME: 'DEFORMABLE_TRANSFORMER'
       ENC_NUM: 0
       DEC_NUM: 6
+      CLIP_LINEAR_NORM: True
 
       MATCHER_NAME: 'HungarianAssigner3D'
       DEPTH_LID: True
