--- a/configs/OV_base4_omni3d_out_resize.yaml
+++ b/configs/OV_base4_omni3d_out_resize.yaml
@@ -49,7 +49,7 @@ MODEL:
       BACKBONE_FP16: True
       USE_NECK: True
       NECK_NAME: 'CPFPN_VoV'
-      FEAT_LEVEL_NUM: 4
+      FEAT_LEVEL_IDXS: [0, 1,]
 
       TRANSFORMER_NAME: 'DEFORMABLE_TRANSFORMER'
       ENC_NUM: 0
