--- a/configs/TwoStage_Baseline_crossdomain_kitti.yaml
+++ b/configs/TwoStage_Baseline_crossdomain_kitti.yaml
@@ -1,11 +1,11 @@
 _BASE_: "Base_Omni3D_demo.yaml"
 
 DATASETS:
-  TRAIN: ('SUNRGBD_train', 'SUNRGBD_val',)
+  TRAIN: ('KITTI_train', 'KITTI_val',)
   #TRAIN: ('SUNRGBD_val',)
-  TEST: ('SUNRGBD_test', 'Hypersim_test', 'ARKitScenes_test',)
+  TEST: ('KITTI_test', 'nuScenes_test')
   #TEST: ('SUNRGBD_val',)
-  CATEGORY_NAMES: ('table', 'bed', 'sofa', 'bathtub', 'sink', 'shelves', 'cabinet', 'chair', 'toilet',)
+  CATEGORY_NAMES: ('pedestrian', 'car',)
   DATASET_ID_GROUP: [[0, 1, 2], [3, 4, 5], [6, 7, 8], [9, 10, 11], [12, 13, 14], [15, 16, 17],]
   DATA_RATIO: 1.0
 
